<resources>
    <string name="google_app_id">479105214982</string>
    <string name="app_name">Hypemeter</string>
    <string name="hm_slogan">Nothing draws a crowd, like you.</string>
    <string name="nearby">Nearby</string>
    <string name="rankings">Rankings</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Header strings -->
    <string name="header_profname">\@yourname</string>
    <string name="header_location">Pallet Town</string>
    <string name="header_privacy">Privacy</string>

    <!-- Login activity strings -->
    <string name="username_entry">Enter Username \"@yourname\"</string>
    <string name="password">Enter Password</string>
    <string name="loginbutton">Log In</string>
    <string name="loginfb">Log In with Facebook</string>
    <string name="registerbutton">Register</string>
    <string name="forgotpassword">Forgot Password?</string>

    <!-- Registration activity strings -->
    <string name="enteremail">Enter Email</string>
    <string name="enterdisplayname">Enter Display Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="birthday">Enter Birthday</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="notsay">Other</string>
    <string name="alreadyreg">I\'m already registered. Log me in!</string>

    <!-- Forgot password activity strings -->
    <string name="passsent_toast">A temporary password has been sent to you.</string>
    <string name="done">Done</string>
    <string name="sendpass">Send Password</string>
    <string name="cancel">Cancel</string>


    <!--Settings strings -->
    <string name="location_settings">Location Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="sethome">Set Home Address</string>
    <string name="setwork">Set Work Address</string>
    <string name="enterhomebtn">Set It!</string>
    <string name="notifycheckin">Check In/Out Notifications</string>
    <string name="savehistory">Save Places History</string>
    <string name="seerecent">See Recent Places</string>
    <string name="clearrecent">Clear Recent Places</string>
    <string name="confirmsubs">Confirm New Subscribers</string>
    <string name="endbackground">End Background Service</string>
    <string name="end">End It!</string>
    <string name="versionnumber">Version: 1.0.1492</string>
    <string name="push_yournotify">Receive Push Notifications</string>

    <!-- Profile strings -->
    <string name="prof_name">Your name</string>
    <string name="prof_username">\@yourname</string>
    <string name="prof_bio">Enter your bio!</string>
    <string name="prof_location">Pallet Town</string>
    <string name="prof_tag">Verified</string>
    <string name="prof_privacy">Privacy</string>
    <string name="prof_logout">LOGOUT</string>
    <string name="prof_followers">Followers</string>
    <string name="prof_following">Following</string>
    <string name="prof_followernbr">0</string>
    <string name="prof_followingnbr">0</string>
    <string name="prof_badgetext">Ember Starter</string>
    <string name="prof_biotext">Wants to be the very best!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_pic">Upload profile photo</string>

    <!-- Notifications strings -->
    <string name="notify_nearbytitle">Nearby</string>
    <string name="notify_usertitle">You</string>

    <!-- Power rankings strings -->
    <string name="rankings_title">Power Rankings</string>

    <!-- Filters strings -->
    <string name="filters">Filters</string>
    <string name="basic_filters">Basic Filters</string>
    <string name="radius">Radius</string>
    <string name="radius_.5">.5 miles</string>
    <string name="radius_1">1 mile</string>
    <string name="radius_2">2 miles</string>
    <string name="radius_5">5 miles</string>
    <string name="price_range">Maximum Price</string>
    <string name="price1">$</string>
    <string name="price2">$$</string>
    <string name="price3">$$$</string>
    <string name="price4">$$$$</string>
    <string name="thefunstuff">The Fun Stuff</string>
    <string name="restaurants">Restaurants</string>
    <string name="bars">Bars</string>
    <string name="nightlife">NightLife</string>
    <string name="tourism">Tourism</string>
    <string name="entertainment">Entertainment</string>
    <string name="fitnessrec">Fitness and Recreation</string>
    <string name="shopping">Shopping</string>

    <string name="title_activity_maps">Map</string>

    <!-- Education page strings -->
    <string name="title_activity_edupage_activity">edupage_activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="edu_welcome">Welcome to Hypemeter</string>
    <string name="edu_hypefeed">Hypefeed</string>
    <string name="edu_rankings">Power Rankings</string>
    <string name="edu_welcometext">See how busy places are in your city, in real time.</string>
    <string name="edu_hypefeedtext">Glance into who\'s been where &amp; what they have to say.</string>
    <string name="edu_rankingstext">Check out how the most popular places compare in our weekly Power Rankings.</string>
    <string name="edu_gotit">Got it. Let\'s do this!</string>

    <!-- Autocomplete strings -->
    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>

    <!-- Placepicker strings -->
    <string name="intro_title">PlacePicker Sample</string>
    <string name="pick_title">Pick a place</string>
    <string name="pick_text">Clicking below constructs an Intent to show the place picker dialog.
        \nIf a place was selected, its details are read from the returned data and shown in a separate card.</string>
    <string name="pick_action">Pick a place</string>
    <string name="detail_text">Place id: %1$s\nAddress: %2$s\nPhone: %3$s\n\n%4$s</string>
    <string name="empty"></string>
     <string name="intro_message">
        <![CDATA[


            This sample uses the PlacePicker.Builder to construct an Intent to launch the place
            picker dialog. Users can select a place or add a new place,
            which is then returned to the application.



        ]]>
    </string>
    
    <!-- Place details strings -->
    <string name="placedetails_title">Oak\'s Lab</string>
    <string name="placedetails_address">1 Journey Lane, Pallet Town</string>
    <string name="placedetails_people">0</string>
    <string name="placedetails_capacity">0</string>
    <string name="placedetails_friendsnumber">0</string>
    <string name="placedetails_friends">Friends</string>
    <string name="placedetails_heat">Heating Up</string>
    <string name="placedetails_cool">Cooling Off</string>
    <string name="placedetails_hypefeed">Hypefeed</string>

</resources>
