<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <ImageView
            android:id="@+id/reg_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/hmicon_android"
            android:paddingTop="10dp"
            android:maxWidth="275dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true" />

        <EditText
            android:id="@+id/reg_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_icon"
            android:layout_alignLeft="@id/reg_icon"
            android:layout_alignRight="@id/reg_icon"
            android:inputType="textEmailAddress"
            android:hint="@string/username_entry" />

        <EditText
            android:id="@+id/reg_displayname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_username"
            android:layout_alignLeft="@id/reg_icon"
            android:layout_alignRight="@id/reg_icon"
            android:inputType="textPersonName"
            android:hint="@string/enterdisplayname" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_displayname"
            android:layout_alignLeft="@id/reg_icon"
            android:layout_alignRight="@id/reg_icon"
            android:inputType="textEmailAddress"
            android:hint="@string/enteremail" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_email"
            android:layout_alignLeft="@id/reg_icon"
            android:layout_alignRight="@id/reg_icon"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:fontFamily="sans-serif" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_password"
            android:layout_alignLeft="@id/reg_icon"
            android:layout_alignRight="@id/reg_icon"
            android:inputType="textPassword"
            android:hint="@string/confirmpassword"
            android:fontFamily="sans-serif" />

        <Button
            android:id="@+id/bday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_pass"
            android:layout_alignLeft="@id/reg_icon"
            android:layout_alignRight="@id/reg_icon"
            android:layout_marginTop="10dp"
            android:text="@string/birthday"
            style="?android:attr/borderlessButtonStyle" />

        <TextView
            android:id="@+id/bday_shown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bday_button"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bday_shown"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <RadioGroup
            android:id="@+id/genderradiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/notsay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notsay" />

        </RadioGroup>

        <Button
            android:id="@+id/reg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderradiogroup"
            android:layout_alignLeft="@id/reg_icon"
            android:layout_alignRight="@id/reg_icon"
            android:layout_marginTop="10dp"
            android:text="@string/registerbutton"
            android:textColor="#ffffff"
            android:background="@drawable/regbutton" />

        <TextView
            android:id="@+id/already_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"
            android:text="@string/alreadyreg" />

    </RelativeLayout>


</ScrollView>